aks/shoppingapi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shoppingapi-deployment
  labels:
    app: shoppingapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shoppingapi
  template:
    metadata:
      labels:
        app: shoppingapi
    spec:
      containers:
      - name: shoppingapi
        image: eshopriseacr.azurecr.io/shoppingapi:#{Build.BuildId}#
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "64Mi"
            cpu: "0.1"
          limits:
            memory: "128Mi"
            cpu: "0.3"
      imagePullSecrets:
      - name: acr-secret
---
apiVersion: v1
kind: Service
metadata:
  name: shoppingapi-service
spec:
  selector:
    app: shoppingapi
  ports:
  - protocol: TCP
    port: 80

#test
