aks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eshop-host
spec:
  rules:
  - host: "eshop.garantii.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: shoppingclient-service
            port:
              number: 80
